I just Changed Project Name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/mod2_sol.css">
     </head>
     <body>
-<h1 >Module 2 Project</h1>
+<h1 >Module 2</h1>
 
 <section id="Part-1">
     <div id="section1">
