--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <section id="Part-1">
     <div id="section1">
-        This is The Menu Part 1
+        This is Menu Part 1
         <div id="section1-inside"> This is The Menu 1</div>
         <div id="section1-description">You will NOT be graded on this, but you may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set the font size of the heading and section title to be 75% larger and 25% larger (respectively) than the font size of the dummy text.</div>
 
